<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_edit">
    <include layout="@layout/layout_title" />
    
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="vertical" >
        
		<ImageView 
			android:id="@+id/choose_image"       
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>    
        
    </LinearLayout>
    
    
    
    <HorizontalScrollView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout 
	    android:id="@+id/effect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/popup">
	    
	    
		    <Button
	            android:id="@+id/old_remeber_button"            
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/old_remeber"
	            android:drawableTop="@drawable/photoeffect_huaijiu"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/sharpen_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sharpen"
	            android:drawableTop="@drawable/photoeffect_ruihua"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/blur_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/blur"
	             android:drawableTop="@drawable/photoeffect_mohu"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/overlay_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/overlay"
	            android:drawableTop="@drawable/photoeffect_diejia"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	
        
	        <Button
	            android:id="@+id/emboss_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/emboss"
	            android:drawableTop="@drawable/photoeffect_fudiao"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/film_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/film"
	            android:drawableTop="@drawable/photoeffect_dipian"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/sunshine_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sunshine"
	             android:drawableTop="@drawable/photoeffect_guangzhao"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	        <Button
	            android:id="@+id/neon_button"          
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/neon"
	            android:drawableTop="@drawable/photoeffect_nihong"
	            android:textColor="@android:color/white"
	            android:textSize="12dip"
	            android:background="@android:color/transparent"
	            android:onClick="onClick"/>
	        
	       
		
	</LinearLayout> 
	</HorizontalScrollView>

</LinearLayout>