<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/bg_edit">
	
    <include layout="@layout/layout_title" />
	
	
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="vertical" >
        
		<ImageView 
			android:id="@+id/choose_image"       
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>    
        
    </LinearLayout>

    
    <HorizontalScrollView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	
	<LinearLayout 
	    android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/popup">
	    
	    <Button
            android:id="@+id/crop_button"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_mainmenu_edit_c"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	    <Button
            android:id="@+id/btn_rotate_leftrotate_c"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftrotate"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_rotate_leftrotate_c"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	    
	     <Button
            android:id="@+id/btn_rotate_rightrotate_c"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightrotate"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_rotate_rightrotate_c"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	     
	     <Button
            android:id="@+id/btn_rotate_horizontalrotate_c"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontalrotate"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_rotate_horizontalrotate_c"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	     
	     <Button
            android:id="@+id/btn_rotate_verticalrotate_c"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verticalrotate"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_rotate_verticalrotate_c"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	     
	     <Button
            android:id="@+id/zoom_in"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_in"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/zoom_in"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	     <Button
            android:id="@+id/zoom_out"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_out"
            android:textColor="@android:color/white"
            android:onClick="onClick"
            android:drawableTop="@drawable/zoom_out"
            android:textSize="12dip"
            android:background="@android:color/transparent"/>
	    
       
	    
	</LinearLayout>
	
	</HorizontalScrollView>
	    
	
</LinearLayout>
