<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit"
    android:orientation="vertical" >
    
    <include layout="@layout/layout_title" />
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:orientation="vertical" >
        
		<ImageView 
			android:id="@+id/choose_image"       
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>    
        
    </LinearLayout>  
    
    
    <LinearLayout 
	    android:id="@+id/seek_bar"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        
        android:background="@drawable/popup">
        
	    <LinearLayout 
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:gravity="center_vertical">
			
	        <TextView 
			    android:layout_width="45dip"
				android:layout_height="wrap_content" 
				android:text="@string/saturation"
				android:textColor="@android:color/white"
				android:gravity="center"/>
	        
	        <SeekBar 
			    android:id="@+id/saturation_bar"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:progress="100" 
				android:max="200"/>
			
		</LinearLayout>
		
	    <LinearLayout 
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:gravity="center_vertical">
			
	        <TextView 
			    android:layout_width="45dip"
				android:layout_height="wrap_content" 
				android:text="@string/brightness"
				android:textColor="@android:color/white"
				android:gravity="center"/>
	        
	        <SeekBar 
			    android:id="@+id/brightness_bar"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:progress="127" 
				android:max="255"/>
			
		</LinearLayout>
		
	    <LinearLayout 
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:orientation="horizontal"
			android:gravity="center_vertical">
			
	        <TextView 
			    android:layout_width="45dip"
				android:layout_height="wrap_content" 
				android:text="@string/contrast"
				android:textColor="@android:color/white"
				android:gravity="center"/>
	        
	        <SeekBar 
			    android:id="@+id/contrast_bar"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:progress="64" 
				android:max="128"/>
			
		</LinearLayout>
	    
	    
	</LinearLayout>
    

</LinearLayout>